--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/test.js"
+    "start": "node src/test.js",
+    "server" : "nodemon src/test.js"
   },
   "keywords": [],
   "author": "",
